update install instruction