@@ -12,9 +12,12 @@
 
 `git clone git@github.com:arsaizdihar/IF2210_TB2_MZC.git`
 
-- Install openjfx
+- Download openjfx 18
 
-`sudo apt install openjfx`
+Download openjfx from this link
+`https://download2.gluonhq.com/openjfx/18.0.2/openjfx-18.0.2_linux-aarch64_bin-sdk.zip`
+
+Extract the zip and remember the extracted path
 
 - Compile package using maven in project root folder
 
@@ -22,4 +25,11 @@
 
 - Inside app/target folder run
 
-`java --module-path /usr/share/openjfx/lib --add-modules=javafx.base,javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web -jar app-1.0-SNAPSHOT-shaded.jar`
+`
+java \
+--module-path javafx-sdk-18.0.2\lib \
+--add-exports=javafx.base/com.sun.javafx.event=org.controlsfx.controls \
+-jar app-1.0-SNAPSHOT-shaded.jar
+`
+
+replace javafx-sdk-18.0.2\lib with relative or absolute path to the same folder from previously extracted folder
